Atualização de permissões para perfis de usuario